src/isort/snapshots/ruff__isort__tests__force_to_top.py.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind: UnsortedImports
  location:
    row: 1
    column: 0
  end_location:
    row: 9
    column: 0
  fix:
    patch:
      content: "import os\n\n# This is a comment in the same section, so we need to add one newline.\nimport sys\n\nimport module_to_force_to_top\nimport numpy as np\n\n# This is a comment, but it starts a new section, so we don't need to add a newline\n# before it.\nimport leading_prefix\n"
      location:
        row: 1
        column: 0
      end_location:
        row: 9
        column: 0

