src/isort/snapshots/ruff__isort__tests__force_wrap_aliases_force_wrap_aliases.py.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind: UnsortedImports
  location:
    row: 1
    column: 0
  end_location:
    row: 4
    column: 0
  fix:
    location:
      row: 1
      column: 0
    end_location:
      row: 4
      column: 0
    content: "from .a import (\n    a1 as a1,\n    a2 as a2,\n)\nfrom .b import b1 as b1\nfrom .c import c1\n"
    message: Organize imports
  parent: ~

