src/isort/snapshots/ruff__isort__tests__import_from_after_import.py.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind: UnsortedImports
  location:
    row: 1
    column: 0
  end_location:
    row: 2
    column: 9
  fix:
    patch:
      content: "import os\nfrom collections import Collection\n"
      location:
        row: 1
        column: 0
      end_location:
        row: 3
        column: 0
    applied: false

