src/isort/snapshots/ruff__isort__tests__inline_comments.py.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind:
    UnsortedImports: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 12
    column: 0
  fix:
    content: "from a.prometheus.metrics import (  # type:ignore[attr-defined]\n    TERMINAL_CURRENTLY_RUNNING_TOTAL,\n)\nfrom b.prometheus.metrics import (\n    TERMINAL_CURRENTLY_RUNNING_TOTAL,  # type:ignore[attr-defined]\n)\nfrom c.prometheus.metrics import (\n    TERMINAL_CURRENTLY_RUNNING_TOTAL,  # type:ignore[attr-defined]\n)\nfrom d.prometheus.metrics import (  # type:ignore[attr-defined]\n    OTHER_RUNNING_TOTAL,\n    TERMINAL_CURRENTLY_RUNNING_TOTAL,\n)\n"
    location:
      row: 1
      column: 0
    end_location:
      row: 12
      column: 0
  parent: ~

