src/isort/snapshots/ruff__isort__tests__insert_empty_lines.pyi.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind: UnsortedImports
  location:
    row: 1
    column: 0
  end_location:
    row: 3
    column: 0
  fix:
    location:
      row: 1
      column: 0
    end_location:
      row: 3
      column: 0
    content: "import a\nimport b\n\n"
    message: Organize imports
  parent: ~
- kind: UnsortedImports
  location:
    row: 4
    column: 0
  end_location:
    row: 6
    column: 0
  fix:
    location:
      row: 4
      column: 0
    end_location:
      row: 6
      column: 0
    content: "import os\nimport sys\n\n"
    message: Organize imports
  parent: ~
- kind: UnsortedImports
  location:
    row: 14
    column: 0
  end_location:
    row: 16
    column: 0
  fix:
    location:
      row: 14
      column: 0
    end_location:
      row: 16
      column: 0
    content: "import os\nimport sys\n\n"
    message: Organize imports
  parent: ~

