src/isort/snapshots/ruff__isort__tests__leading_prefix.py.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind: UnsortedImports
  location:
    row: 1
    column: 7
  end_location:
    row: 2
    column: 9
  fix:
    content: "\nimport os\nimport sys\n"
    location:
      row: 1
      column: 7
    end_location:
      row: 3
      column: 0
- kind: UnsortedImports
  location:
    row: 5
    column: 11
  end_location:
    row: 6
    column: 13
  fix:
    content: "\n    import os\n    import sys\n"
    location:
      row: 5
      column: 11
    end_location:
      row: 7
      column: 0

